name:                cycle-bases
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ckaipf/cycle-bases#readme
license:             BSD3
-- license-file:        LICENSE
author:              Simon Johanning, Camill Kaipf
maintainer:          camill.kaipf@gmail.com
copyright:           2017 Johanning Kaipf
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Gauss
                     , EdgeShort
                     , Graph
                     , Horton                     
                     , DePina
                     , FloydWarshall
                     , TH
                   
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , finite-field
                     , containers >= 0.5
                     , template-haskell >= 2.11
                     , primes
  default-language:    Haskell2010

--executable cycle-bases-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , cycle-bases
-- default-language:    Haskell2010

test-suite cycle-bases-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vector
                     , finite-field >= 0.9
                     , cycle-bases
                     , containers >= 0.5
                     , template-haskell >= 2.11
                     , type-level-numbers
                    
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/camillkaipf/cycle-bases